# decom

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
data/: lorem.txt.lz4  lorem.txt.zst  lorem.txt.zz
src/: error.rs  lib.rs
src/io/: mod.rs
