[package]
name = "decom"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
flate2 = { version = "1.1.9", default-features = false, optional = true }
log = "0.4.29"
lz4_flex = { version = "0.12.0", optional = true }
thiserror = "2.0.18"
zstd = { version = "0.13.3", optional = true }

[features]
default = ["lz4", "zstd", "zlib", "gzip"]

lz4 = ["dep:lz4_flex"]
zstd = ["dep:zstd"]
zstd-wasm = ["zstd", "zstd/wasm"]
zlib-rs = ["flate2/zlib-rs"]
zlib = ["zlib-rs"]
gzip = ["zlib-rs"]
